--- a/package/crds/bigtable.gcp.upbound.io_tables.yaml
+++ b/package/crds/bigtable.gcp.upbound.io_tables.yaml
@@ -78,6 +78,11 @@ spec:
                       type: object
                     type: array
                   deletionProtection:
+                    description: A field to make the table protected against data
+                      loss i.e. when set to PROTECTED, deleting the table, the column
+                      families in the table, and the instance containing the table
+                      would be prohibited. If not provided, deletion protection will
+                      be set to UNPROTECTED.
                     type: string
                   instanceName:
                     description: The name of the Bigtable instance.
