--- a/package/crds/cloudbuild.gcp.upbound.io_triggers.yaml
+++ b/package/crds/cloudbuild.gcp.upbound.io_triggers.yaml
@@ -550,6 +550,11 @@ spec:
                       template. Structure is documented below.
                     items:
                       properties:
+                        githubEnterpriseConfig:
+                          description: 'The full resource name of the github enterprise
+                            config. Format: projects/{project}/locations/{location}/githubEnterpriseConfigs/{id}.
+                            projects/{project}/githubEnterpriseConfigs/{id}.'
+                          type: string
                         path:
                           description: The path of the file, with the repo root as
                             the root of the path.
@@ -873,6 +878,11 @@ spec:
                       below.
                     items:
                       properties:
+                        githubEnterpriseConfig:
+                          description: 'The full resource name of the github enterprise
+                            config. Format: projects/{project}/locations/{location}/githubEnterpriseConfigs/{id}.
+                            projects/{project}/githubEnterpriseConfigs/{id}.'
+                          type: string
                         ref:
                           description: The branch or tag to use. Must start with "refs/"
                             .
