--- a/package/crds/sql.gcp.upbound.io_databaseinstances.yaml
+++ b/package/crds/sql.gcp.upbound.io_databaseinstances.yaml
@@ -258,7 +258,8 @@ spec:
                             high availability (REGIONAL) or single zone (ZONAL).'
                             For all instances, ensure that settings.backup_configuration.enabled
                             is set to true. For MySQL instances, ensure that settings.backup_configuration.binary_log_enabled
-                            is set to true. For Postgres instances, ensure that settings.backup_configuration.point_in_time_recovery_enabled
+                            is set to true. For Postgres and SQL Server instances,
+                            ensure that settings.backup_configuration.point_in_time_recovery_enabled
                             is set to true. Defaults to ZONAL.
                           type: string
                         backupConfiguration:
@@ -296,7 +297,8 @@ spec:
                               pointInTimeRecoveryEnabled:
                                 description: True if Point-in-time recovery is enabled.
                                   Will restart database if enabled after instance
-                                  creation. Valid only for PostgreSQL instances.
+                                  creation. Valid only for PostgreSQL and SQL Server
+                                  instances.
                                 type: boolean
                               startTime:
                                 description: HH:MM format time indicating when backup
@@ -835,6 +837,11 @@ spec:
                     description: The first IPv4 address of any type assigned.
                     type: string
                   id:
+                    type: string
+                  instanceType:
+                    description: The type of the instance. The supported values are
+                      SQL_INSTANCE_TYPE_UNSPECIFIED, CLOUD_SQL_INSTANCE, ON_PREMISES_INSTANCE
+                      and READ_REPLICA_INSTANCE.
                     type: string
                   ipAddress:
                     description: The IPv4 address assigned.
