--- a/package/crds/cloudplatform.gcp.upbound.io_projects.yaml
+++ b/package/crds/cloudplatform.gcp.upbound.io_projects.yaml
@@ -65,12 +65,12 @@ spec:
               forProvider:
                 properties:
                   autoCreateNetwork:
-                    description: Create the 'default' network automatically.  Default
-                      true. If set to false, the default network will be deleted.  Note
-                      that, for quota purposes, you will still need to have 1 network
-                      slot available to create the project successfully, even if you
-                      set auto_create_network to false, since the network will exist
-                      momentarily.
+                    description: Controls whether the 'default' network exists on
+                      the project. Defaults to true, where it is created. Therefore,
+                      for quota purposes, you will still need to have 1 network slot
+                      available to create the project successfully, even if you set
+                      auto_create_network to false.googleapis.com on the project to
+                      interact with the GCE API and currently leaves it enabled.
                     type: boolean
                   billingAccount:
                     description: The alphanumeric ID of the billing account this project
