--- a/package/crds/compute.gcp.upbound.io_routernats.yaml
+++ b/package/crds/compute.gcp.upbound.io_routernats.yaml
@@ -387,6 +387,10 @@ spec:
                     description: Timeout (in seconds) for TCP established connections.
                       Defaults to 1200s if not set.
                     type: number
+                  tcpTimeWaitTimeoutSec:
+                    description: Timeout (in seconds) for TCP connections that are
+                      in TIME_WAIT state. Defaults to 120s if not set.
+                    type: number
                   tcpTransitoryIdleTimeoutSec:
                     description: Timeout (in seconds) for TCP transitory connections.
                       Defaults to 30s if not set.
