--- a/package/crds/privateca.gcp.upbound.io_certificateauthorities.yaml
+++ b/package/crds/privateca.gcp.upbound.io_certificateauthorities.yaml
@@ -216,6 +216,8 @@ spec:
                                         this value describes the depth of subordinate
                                         CA certificates that are allowed. If this
                                         value is less than 0, the request will fail.
+                                        Setting the value to 0 requires setting zero_max_issuer_path_length
+                                        = true.
                                       type: number
                                     nonCa:
                                       description: When true, the "CA" in Basic Constraints
@@ -226,7 +228,7 @@ spec:
                                     zeroMaxIssuerPathLength:
                                       description: When true, the "path length constraint"
                                         in Basic Constraints extension will be set
-                                        to 0. if both max_issuer_path_length and zero_max_issuer_path_length
+                                        to 0. If both max_issuer_path_length and zero_max_issuer_path_length
                                         are unset, the max path length will be omitted
                                         from the CA certificate.
                                       type: boolean
