--- a/package/crds/gcp.upbound.io_providerconfigs.yaml
+++ b/package/crds/gcp.upbound.io_providerconfigs.yaml
@@ -70,6 +70,15 @@ spec:
                     required:
                     - path
                     type: object
+                  impersonateServiceAccount:
+                    description: GCP service account impersonation
+                    properties:
+                      name:
+                        description: GCP service account email address
+                        type: string
+                    required:
+                    - name
+                    type: object
                   secretRef:
                     description: A SecretRef is a reference to a secret key that contains
                       the credentials that must be used to connect to the provider.
@@ -94,10 +103,10 @@ spec:
                     - None
                     - Secret
                     - AccessToken
+                    - ImpersonateServiceAccount
                     - InjectedIdentity
                     - Environment
                     - Filesystem
-                    - Upbound
                     type: string
                   upbound:
                     description: Upbound defines the options for authenticating using
